src/Analizador/Sintaxis.java
/* Generated By:JavaCC: Do not edit this line. Sintaxis.java */
package Analizador;
public class Sintaxis implements SintaxisConstants {
    public static void main(String[] args) throws ParseException {
        Sintaxis parser = new Sintaxis(System.in);
        parser.Program();
    }

/** Fin Lexico **/

// Comienza analizador de sintaxis.

// Define el programa como una serie de declaraciones
  final public void Program() throws ParseException {
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      Declaracion();
    }
    jj_consume_token(0);
  }

// Define una declaración como una declaración de variable, una declaración de función, una estructura de control, una expresión o un bloque
  final public void Declaracion() throws ParseException {
    if (jj_2_2(2)) {
      DeclaracionVariable();
    } else if (jj_2_3(2)) {
      DeclaracionArreglo();
    } else if (jj_2_4(2)) {
      DeclaracionFuncion();
    } else if (jj_2_5(2)) {
      EstructuraControl();
    } else if (jj_2_6(2)) {
      DeclaracionReturn();
    } else if (jj_2_7(2)) {
      DeclaracionImpresion();
    } else if (jj_2_8(2)) {
      DeclaracionLlamadaFuncion();
    } else if (jj_2_9(2)) {
      DeclaracionEstructura();
    } else if (jj_2_10(2)) {
      DeclaracionImplementacion();
    } else if (jj_2_11(2)) {
      Expresion();
      jj_consume_token(PUNTOYCOMA);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Define una declaración de variable
  final public void DeclaracionVariable() throws ParseException {
    jj_consume_token(LET);
    if (jj_2_12(2)) {
      jj_consume_token(MUT);
    } else {
      ;
    }
    jj_consume_token(IDENTIFIER);
    if (jj_2_13(2)) {
      jj_consume_token(COLON);
      Tipo();
    } else {
      ;
    }
    jj_consume_token(EQUAL);
    Expresion();
    jj_consume_token(PUNTOYCOMA);
  }

// Define una declaración de función
  final public void DeclaracionFuncion() throws ParseException {
    jj_consume_token(FN);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(LPARENT);
    if (jj_2_14(2)) {
      ListaParametros();
    } else {
      ;
    }
    jj_consume_token(RPARENT);
    if (jj_2_15(2)) {
      jj_consume_token(ARROW);
      Tipo();
    } else {
      ;
    }
    Bloque();
  }

// Define una declaración de arreglo
  final public void DeclaracionArreglo() throws ParseException {
    jj_consume_token(LET);
    if (jj_2_16(2)) {
      jj_consume_token(MUT);
    } else {
      ;
    }
    jj_consume_token(IDENTIFIER);
    if (jj_2_17(2)) {
      jj_consume_token(COLON);
      Tipo();
    } else {
      ;
    }
    jj_consume_token(EQUAL);
    jj_consume_token(LBRACKET);
    ListaElementos();
    jj_consume_token(RBRACKET);
    jj_consume_token(PUNTOYCOMA);
  }

// Define una lista de elementos de un arreglo
  final public void ListaElementos() throws ParseException {
    if (jj_2_19(2)) {
      Expresion();
      label_2:
      while (true) {
        if (jj_2_18(2)) {
          ;
        } else {
          break label_2;
        }
        jj_consume_token(COMMA);
        Expresion();
      }
    } else if (jj_2_20(2)) {
      jj_consume_token(57);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Define una lista de parámetros de función
  final public void ListaParametros() throws ParseException {
    if (jj_2_22(2)) {
      Parametro();
      label_3:
      while (true) {
        if (jj_2_21(2)) {
          ;
        } else {
          break label_3;
        }
        jj_consume_token(COMMA);
        Parametro();
      }
    } else if (jj_2_23(2)) {
      jj_consume_token(57);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Define un parámetro de función
  final public void Parametro() throws ParseException {
    jj_consume_token(IDENTIFIER);
    jj_consume_token(COLON);
    Tipo();
  }

// Define una estructura de control
  final public void EstructuraControl() throws ParseException {
    if (jj_2_24(2)) {
      DeclaracionIf();
    } else if (jj_2_25(2)) {
      DeclaracionWhile();
    } else if (jj_2_26(2)) {
      DeclaracionFor();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Define una declaración if con soporte para else if y else
  final public void DeclaracionIf() throws ParseException {
    jj_consume_token(IF);
    Expresion();
    Bloque();
    label_4:
    while (true) {
      if (jj_2_27(2)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(ELSEIF);
      Expresion();
      Bloque();
    }
    if (jj_2_28(2)) {
      jj_consume_token(ELSE);
      Bloque();
    } else {
      ;
    }
  }

// Define una declaración while
  final public void DeclaracionWhile() throws ParseException {
    jj_consume_token(WHILE);
    Expresion();
    Bloque();
  }

// Define una declaración for
  final public void DeclaracionFor() throws ParseException {
    jj_consume_token(FOR);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(IN);
    Expresion();
    jj_consume_token(58);
    if (jj_2_29(2)) {
      jj_consume_token(EQUAL);
    } else {
      ;
    }
    Expresion();
    Bloque();
  }

// Define un bloque de código
  final public void Bloque() throws ParseException {
    jj_consume_token(LBRACE);
    label_5:
    while (true) {
      if (jj_2_30(2)) {
        ;
      } else {
        break label_5;
      }
      Declaracion();
    }
    jj_consume_token(RBRACE);
  }

// Define una expresión
  final public void Expresion() throws ParseException {
    if (jj_2_31(2)) {
      ExpresionAsignacion();
    } else if (jj_2_32(2)) {
      ExpresionLogicaOr();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Define una asignación
  final public void ExpresionAsignacion() throws ParseException {
    jj_consume_token(IDENTIFIER);
    jj_consume_token(EQUAL);
    Expresion();
  }

// Define una expresión lógica OR
  final public void ExpresionLogicaOr() throws ParseException {
    ExpresionLogicaAnd();
    label_6:
    while (true) {
      if (jj_2_33(2)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(OR);
      ExpresionLogicaAnd();
    }
  }

// Define una expresión lógica AND
  final public void ExpresionLogicaAnd() throws ParseException {
    ExpresionIgualdad();
    label_7:
    while (true) {
      if (jj_2_34(2)) {
        ;
      } else {
        break label_7;
      }
      jj_consume_token(AND);
      ExpresionIgualdad();
    }
  }

// Define una expresión de igualdad
  final public void ExpresionIgualdad() throws ParseException {
    ExpresionRelacional();
    label_8:
    while (true) {
      if (jj_2_35(2)) {
        ;
      } else {
        break label_8;
      }
      if (jj_2_36(2)) {
        jj_consume_token(EQUALTO);
      } else if (jj_2_37(2)) {
        jj_consume_token(NOTEQUAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      ExpresionRelacional();
    }
  }

// Define una expresión relacional
  final public void ExpresionRelacional() throws ParseException {
    ExpresionAditiva();
    label_9:
    while (true) {
      if (jj_2_38(2)) {
        ;
      } else {
        break label_9;
      }
      if (jj_2_39(2)) {
        jj_consume_token(LESSTHAN);
      } else if (jj_2_40(2)) {
        jj_consume_token(GREATERTHAN);
      } else if (jj_2_41(2)) {
        jj_consume_token(LESSTHANEQUAL);
      } else if (jj_2_42(2)) {
        jj_consume_token(GREATERTHANEQUAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      ExpresionAditiva();
    }
  }

// Define una expresión aditiva
  final public void ExpresionAditiva() throws ParseException {
    ExpresionMultiplicativa();
    label_10:
    while (true) {
      if (jj_2_43(2)) {
        ;
      } else {
        break label_10;
      }
      if (jj_2_44(2)) {
        jj_consume_token(PLUS);
      } else if (jj_2_45(2)) {
        jj_consume_token(MINUS);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      ExpresionMultiplicativa();
    }
  }

// Define una expresión multiplicativa
  final public void ExpresionMultiplicativa() throws ParseException {
    ExpresionUnaria();
    label_11:
    while (true) {
      if (jj_2_46(2)) {
        ;
      } else {
        break label_11;
      }
      if (jj_2_47(2)) {
        jj_consume_token(MULTIPLICATION);
      } else if (jj_2_48(2)) {
        jj_consume_token(DIVISION);
      } else if (jj_2_49(2)) {
        jj_consume_token(MODULUS);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      ExpresionUnaria();
    }
  }

// Define una expresión unaria
  final public void ExpresionUnaria() throws ParseException {
    if (jj_2_50(2)) {
      jj_consume_token(NOT);
      ExpresionUnaria();
    } else if (jj_2_51(2)) {
      ExpresionPrimaria();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Define una expresión primaria
  final public void ExpresionPrimaria() throws ParseException {
    if (jj_2_52(2)) {
      Literal();
    } else if (jj_2_53(2)) {
      jj_consume_token(IDENTIFIER);
    } else if (jj_2_54(2)) {
      LlamadaFuncion();
    } else if (jj_2_55(2)) {
      jj_consume_token(LPARENT);
      Expresion();
      jj_consume_token(RPARENT);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Define un literal
  final public void Literal() throws ParseException {
    if (jj_2_56(2)) {
      jj_consume_token(INT);
    } else if (jj_2_57(2)) {
      jj_consume_token(FLOAT);
    } else if (jj_2_58(2)) {
      jj_consume_token(STRING);
    } else if (jj_2_59(2)) {
      jj_consume_token(TRUE);
    } else if (jj_2_60(2)) {
      jj_consume_token(FALSE);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Define una llamada a función
  final public void LlamadaFuncion() throws ParseException {
    jj_consume_token(IDENTIFIER);
    jj_consume_token(LPARENT);
    if (jj_2_61(2)) {
      ListaArgumentos();
    } else {
      ;
    }
    jj_consume_token(RPARENT);
  }

// Define una declaración de llamada a función
  final public void DeclaracionLlamadaFuncion() throws ParseException {
    LlamadaFuncion();
    jj_consume_token(PUNTOYCOMA);
  }

// Define una lista de argumentos
  final public void ListaArgumentos() throws ParseException {
    if (jj_2_63(2)) {
      Expresion();
      label_12:
      while (true) {
        if (jj_2_62(2)) {
          ;
        } else {
          break label_12;
        }
        jj_consume_token(COMMA);
        Expresion();
      }
    } else if (jj_2_64(2)) {
      jj_consume_token(57);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Define un tipo de dato
  final public void Tipo() throws ParseException {
    if (jj_2_65(2)) {
      jj_consume_token(I32);
    } else if (jj_2_66(2)) {
      jj_consume_token(F64);
    } else if (jj_2_67(2)) {
      jj_consume_token(BOOL);
    } else if (jj_2_68(2)) {
      jj_consume_token(STR);
    } else if (jj_2_69(2)) {
      jj_consume_token(STRING_KEYWORD);
    } else if (jj_2_70(2)) {
      jj_consume_token(IDENTIFIER);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Define una declaración de impresión
  final public void DeclaracionImpresion() throws ParseException {
    if (jj_2_71(2)) {
      jj_consume_token(PRINTLN);
    } else if (jj_2_72(2)) {
      jj_consume_token(PRINT);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(LPARENT);
    if (jj_2_73(2)) {
      ListaArgumentos();
    } else {
      ;
    }
    jj_consume_token(RPARENT);
    jj_consume_token(PUNTOYCOMA);
  }

// Define una declaración de return
  final public void DeclaracionReturn() throws ParseException {
    jj_consume_token(RETURN);
    Expresion();
    jj_consume_token(PUNTOYCOMA);
  }

// Define una declaración de estructura
  final public void DeclaracionEstructura() throws ParseException {
    jj_consume_token(STRUCT);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(LBRACE);
    ListaAtributos();
    jj_consume_token(RBRACE);
  }

// Define una lista de atributos de la estructura
  final public void ListaAtributos() throws ParseException {
    label_13:
    while (true) {
      if (jj_2_74(2)) {
        ;
      } else {
        break label_13;
      }
      Atributo();
      jj_consume_token(PUNTOYCOMA);
    }
  }

// Define un atributo de la estructura
  final public void Atributo() throws ParseException {
    jj_consume_token(IDENTIFIER);
    jj_consume_token(COLON);
    Tipo();
  }

// Define una declaración de implementación
  final public void DeclaracionImplementacion() throws ParseException {
    jj_consume_token(IMPL);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(LBRACE);
    label_14:
    while (true) {
      if (jj_2_75(2)) {
        ;
      } else {
        break label_14;
      }
      DeclaracionFuncion();
    }
    jj_consume_token(RBRACE);
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  private boolean jj_2_41(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  private boolean jj_2_42(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_42(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }

  private boolean jj_2_43(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_43(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(42, xla); }
  }

  private boolean jj_2_44(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_44(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(43, xla); }
  }

  private boolean jj_2_45(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_45(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(44, xla); }
  }

  private boolean jj_2_46(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_46(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(45, xla); }
  }

  private boolean jj_2_47(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_47(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(46, xla); }
  }

  private boolean jj_2_48(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_48(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(47, xla); }
  }
